[package]
name = "importer"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
rocksdb = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
indicatif = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
bech32 = { workspace = true }

bitcoin_scan = { path = "../.." }